--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "MeanMapsApp",
+  "name": "mapchat",
   "main": "server.js",
   "dependencies": {
     "body-parser": "~1.5.2",
@@ -10,5 +10,21 @@
     "mongoose": "~4.1.0",
     "morgan": "~1.2.2",
     "socket.io": "^1.3.7"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "version": "1.0.0",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jkral/MapChat.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/jkral/MapChat/issues"
+  },
+  "homepage": "https://github.com/jkral/MapChat#readme",
+  "description": ""
 }
